# cmake-project-structure-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  generate-proto.sh
client/: README.md
cmake/: grpc-generation.cmake
include/: CMakeLists.txt
include/components/: CMakeLists.txt
include/components/ClientInterceptor/: client-interceptor.cpp  client-interceptor.h
include/components/HelloWorldComponent/: hello-world-component.cpp  hello-world-component.h
include/components/ServerInterceptor/: server-interceptor.cpp  server-interceptor.h  server-interceptor.hpp
include/services/: CMakeLists.txt
include/services/AuthServiceImpl/: auth-service-impl.cpp  auth-service-impl.h
include/services/MyServiceImpl/: my-service-impl.hpp
include/utils/: CMakeLists.txt
include/utils/PrintingUtility/: printing-utility.cpp  printing-utility.h
libs/mylib/: mylib.hpp
proto/: auth-service.proto
src/: main.cpp
src/proto/common/: error-details.proto
src/proto/request-models/: auth-requests.proto  requests.proto
src/proto/response-models/: auth-responses.proto  responses.proto
src/proto/services/: auth-service.proto  my-service.proto
tests/: client.cpp
